@@ -61,6 +61,7 @@ Version 1.0.xxx (Oktober xxth 2013)
 - Implemented: Option to create virtual sensors for dummy hardware (hardware tab)
 - Fixed: Chime (ByronSX) when turning on manualy inside domoticz
 - Changed: Now letting SQLite calculating the date/time for clearing up the short-log
+- Fixed: EventSystem, Calling internal URL from within blocky resulted in a unresponsive system (deadlock)
 
 Version 1.0.940 (July 31th 2013)
 - Implemented: Lighting2, when a Group On/Off is received, all switched with the same ID will be set to 'On' or 'Off' (internally)
